@@ -444,7 +444,6 @@ Cache_Entry* transcoder_new(LPVIRTUALFILE virtualfile, bool begin_transcode)
     return cache_entry;
 }
 
-#define MIN_SEGMENT 3   /**< @brief Seek new segment if more distant than this range @todo Seek new segment if more distance should better count in seconds, not segments... */
 bool transcoder_read(Cache_Entry* cache_entry, char* buff, size_t offset, size_t len, int * bytes_read, uint32_t segment_no)
 {
     bool success = true;
@@ -468,7 +467,7 @@ bool transcoder_read(Cache_Entry* cache_entry, char* buff, size_t offset, size_t
     {
         // Try to read requested segment, stack a seek to if if this fails.
         // No seek if not HLS (segment_no) and not required if < MIN_SEGMENT
-        if (segment_no > MIN_SEGMENT && !cache_entry->m_buffer->segment_exists(segment_no))
+        if (segment_no && !cache_entry->m_buffer->segment_exists(segment_no))
         {
             cache_entry->m_seek_to_no = segment_no;
         }
